fix some codeSmells